# stm32-avionics

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .project  CMakeLists.txt  CMakeListsUser.txt  CPPLINT.cfg  FCBv2.2_pins  README-CMAKEmd  README-DESKTOP.md  README.md  compile_commands.json  fake.cpp  generate_git.py  package-lock.json  package.json  platformio.ini  platformio_dummy.c  sample  sample_parse.py  sample_trigger  sample_trigger.cpp  test  test.cpp
System/: CMakeLists.txt  cli.c  cli.h  data_log.c  data_log.h  data_transmission.c  data_transmission.h  filters.cpp  filters.h  hardware_manager.c  hardware_manager.h  pyro_manager.c  pyro_manager.h  radio_manager.c  radio_manager.h  radio_packet_types.h  scheduler.cpp  scheduler.h  state_log.c  state_log.h
System/CMSIS/: CPPLINT.cfg
System/Filtering/: altitude_kalman.cpp  altitude_kalman.h  filters.cpp  filters.h  matrix.h  orientation_estimation.cpp  orientation_estimation.h  orientation_estimator.cpp  orientation_estimator.h
System/States/: flight_state.cpp  flight_state.h  state_ascent.cpp  state_ascent.h  state_cli_config.cpp  state_cli_erase_flash.cpp  state_cli_offload.h  state_coast_ascent.cpp  state_descent.cpp  state_descent.h  state_drogue_descent_n.cpp  state_drogue_descent_n.h  state_initialize.cpp  state_initialize.h  state_main_descent.cpp  state_main_descent.h  state_post_flight.cpp  state_post_flight.h  state_powered_ascent.cpp  state_powered_ascent.h  state_pre_flight.cpp  state_pre_flight.h  state_shutdown.cpp  state_shutdown.h  states_interface.cpp  states_interface.h
System/Tasks/: buzzer_heartbeat.cpp  buzzer_heartbeat.h  buzzer_report_scheme.cpp  buzzer_report_scheme.h  data_offload.c  data_offload.h
System/Utils/: circular_buffer.c  circular_buffer.h
desktop-simulator/: .cproject  .project  CMakeLists.txt  CPPLINT.cfg  README.md  board_config.c  board_config.h  build.sh  desktop_hardware_manager.cpp  desktop_hardware_manager.h  fake_stm_hal.h  main.cpp  rapidcsv.h
desktop-simulator/tests/: test_flight.cpp
desktop_projects/desktop_sim/: .cproject  CMakeLists.txt  board_config.c  board_config.h  desktop_hardware_manager.cpp  desktop_hardware_manager.h  fake_stm_hal.h  main.cpp
desktop_projects/pybind_test/: CMakeLists.txt  example.cpp  test.py
desktop_projects/python_interop_example/: CMakeLists.txt  README  test.py
desktop_sim/: .cproject  .project  CMakeLists.txt  board_config.c  board_config.h  build.sh  desktop_hardware_manager.cpp  desktop_hardware_manager.h  fake_stm_hal.h  main.cpp  main_test.cpp  makefile  rapidcsv.h  sim_timing.cpp  sim_timing.h
desktop_sim/desktop_sim_common/: CMakeLists.txt  desktop_hardware_manager.cpp  desktop_hardware_manager.h  fake_stm_hal.h  hardware_manager_interface.h  nt_hardware_manager.cpp  nt_hardware_manager.h  nt_interface.cpp  nt_interface.h  rapidcsv.h  rocket_physics_sim.cpp  rocket_physics_sim.h  sim_timing.cpp  sim_timing.h
desktop_sim/desktop_sim_gtest/: CMakeLists.txt  board_config.h  sim_hardware_manager.cpp  sim_hardware_manager.h  test_cli_parse.cpp  test_file_flash.cpp  test_flight.cpp  test_trigger_manager.cpp
desktop_sim/desktop_sim_live/: CMakeLists.txt  board_config.c  board_config.h  main.cpp  nt_hardware_manager.cpp  nt_hardware_manager.h
desktop_sim/desktop_ui/: CMakeLists.txt
desktop_sim/tests/: test_cli_parse.cpp  test_expression_parse.cpp  test_expressions.cpp  test_file_flash.cpp  test_flight.cpp
desktop_ui/: CMakeLists.txt  README.md
desktop_ui/allwpilib/: CMakeLists.txt
desktop_ui/src/: App.cpp  App.h  Application.cpp  Application.h  FrameUpdate.h  gui_main.cpp  main.cpp
devices/desktop/: CMakeLists.txt  arm_math.h  fake_internal_flash.cpp  fake_internal_flash.h  file_backed_flash.cpp  file_backed_flash.h  flight_replay.cpp  flight_replay.h  krpc_flight.cpp  krpc_pyro.cpp  krpc_pyro.h  nt_pyro.cpp  nt_pyro.h  print_pyro.cpp  print_pyro.h  tcp_socket.cpp  tcp_socket.h
stm32_projects/: CMakeLists.txt  fcb_v0\pi-debug-v0.cfg
stm32_projects/amazon-F401-breakout/: .cproject  .project  amazon-F401-breakout Debug.launch  amazon-F401-breakout.ioc
stm32_projects/amazon-stm32-arduino/: .cproject  .project  CMakeLists.txt  STM32F401CCUX_FLASH.ld  amazon-stm32-arduino Debug.launch  amazon-stm32-arduino.ioc
stm32_projects/ble_p2p_server/: .cproject  .project  BLE_p2pServer Debug.launch  BLE_p2pServer.ioc  STM32WB15CCUX_FLASH.ld
stm32_projects/device_drivers/: CMakeLists.txt  accel_h3lis331dl.cpp  accel_h3lis331dl.h  adc_device.c  adc_device.cpp  adc_device.h  adc_mcp3564.c  adc_mcp3564.cpp  adc_mcp3564.h  barometer_ms5607.c  barometer_ms5607.cpp  barometer_ms5607.h  ble_chip.h  ble_chip_nrf.c  ble_chip_nrf.cpp  ble_chip_nrf.h  ble_client_std.c  ble_client_std.cpp  ble_client_std.h  bluetooth_uart.cpp  bluetooth_uart.h  buzzer_pwm.c  buzzer_pwm.cpp  buzzer_pwm.h  dc_motor_pwm.cpp  dc_motor_pwm.h  dynamixel_command_queue.h  dynamixel_motor.cpp  dynamixel_motor.h  flash_mb85rsx.c  flash_mb85rsx.cpp  flash_mb85rsx.h  flash_s25flx.c  flash_s25flx.cpp  flash_s25flx.h  gps.c  gps.cpp  gps.h  hal_callbacks.c  hal_callbacks.cpp  (+39 more)
stm32_projects/fcb_v0/: .cproject  .project  CMakeLists.txt  STM32H750VBTX_FLASH.ld  fcb_v0.ioc  old-radio-cfg.txt  pi-debug-v0.launch
stm32_projects/fcb_v1/: .cproject  .project  CMakeLists.txt  fcb_v1.ioc  fcb_v1.launch
stm32_projects/fcb_v2/: .cproject  .project  CMakeLists.txt  README.md  STM32L4R5VGTX_RAM.ld  fcb_v2 Debug.launch  fcb_v2.ioc  fcb_v2.launch
stm32_projects/groundstation/: .cproject  .project  CMakeLists.txt  STM32H743VITX_FLASH.ld  groundstation.ioc  groundstation.launch
stm32_projects/intro_2023/: CMakeLists.txt
stm32_projects/linecutter_hack_test/: .project
stm32_projects/linecutter_r5/: .cproject  .project  (+3 more)
system/: CMakeLists.txt  cli.c  cli.h  data_log.c  data_log.h  hardware_manager.c  hardware_manager.h  pyro_manager.c  pyro_manager.h  radio_manager.c  radio_manager.h  radio_packet_types.h  scheduler.cpp  scheduler.h  state_log.c  state_log.h  trigger_manager.c  trigger_manager.h
wasm_test/: CMakeLists.txt  README.md  test.html
(+1591 files in other folders)
